muss alle files adden

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <div>
-      <button
-        id="menu"
-        onclick="this.classList.toggle('selected')"
-        src="./../assets/close.svg"
-      ></button>
+      <button id="menu"></button>
     </div>
     <div id="app"></div>
     <script type="module" src="./js/main.js"></script>
