menu animation, but there is unwanted delay

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <title>Tab vom Johannes</title>
   </head>
   <body>
-    <div>
+    <div id="menu-container">
       <button id="menu"></button>
+      <div id="menu-background"></div>
     </div>
-    <div id="app"></div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
