--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,21 @@
     <title>Tab vom Johannes</title>
   </head>
   <body>
-    <div id="menu-container">
-      <button id="menu"></button>
-      <div id="menu-background"></div>
-    </div>
+	  <section id="home">
+
+      <div id="menu-container">
+        <button id="menu"></button>
+        <div id="menu-background"></div>
+	  </section>
+	  
+	  <section id="art">
+		<div id="test1"></div>
+	  </section>
+
+	  <section id="about"> 
+		<div id="test2"></div>
+	  </section>
+
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
